# AutomasterBCCM

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml  render.yaml  requirements.txt
app/: server.py
app/static/: index.html
data/reports/: FINDINGS.md  boris_fits.json  deltas.csv
models/: boris.json
scripts/: train_boris.py
src/automaster/: __init__.py  align.py  analyze.py  baseline.py  cli.py  dataset.py  dsp_diff.py  fit.py  io.py  losses.py  metrics.py  model.py  render.py
tests/: conftest.py  test_align.py  test_analyze.py  test_baseline.py  test_dataset.py  test_dsp_diff.py  test_fit.py  test_losses.py  test_metrics.py  test_model.py
