[project]
name = "automaster"
version = "0.1.0"
description = "AutoMaster (BCCM): learn the manual YouTube mastering from before/after pairs"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "soundfile",
    "pyloudnorm",
    "torch",
    "torchaudio",
    "dasp-pytorch",
    "auraloss",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pedalboard",   # GPLv3 — dev only (fast IO, baseline, VST hosting). NOT in distributable core.
    "pytest",
    "pytest-cov",
]

[project.scripts]
automaster = "automaster.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/automaster"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
